.provarCaches/00D410000011HE0EAM/objects/rstkf__glaybudclone__c.object
<CustomObject>
    <description>glaybudclone__c : This object contains information needed to clone financial budget record.</description>
    <fields>
        <fullName>rstkf__glaybudclone_bbdefpct__c</fullName>
        <label>Beginning Balance Deflation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_bbinfpct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Beginning Balance Inflation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_bbpopmethod__c</fullName>
        <label>Beginning Balance Population Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Set to Zero</fullName>
                    <default>true</default>
                    <label>Set to Zero</label>
                </value>
                <value>
                    <fullName>Set to Actual Ending Balances</fullName>
                </value>
                <value>
                    <fullName>Set to Budgeted Ending Balances</fullName>
                </value>
                <value>
                    <fullName>Set Proportionally to Source Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_dimnum__c</fullName>
        <label>Original Dimension #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_dimval__c</fullName>
        <label>Original Dimension Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_fromdimval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to From Dimension Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets</relationshipLabel>
        <relationshipName>glaybudclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_fromglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to From GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone-to from GL Account)</relationshipLabel>
        <relationshipName>glaybudclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_fromglproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to From Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone-to From Project)</relationshipLabel>
        <relationshipName>glaybudclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets</relationshipLabel>
        <relationshipName>glaybudclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets</relationshipLabel>
        <relationshipName>glaybudclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets</relationshipLabel>
        <relationshipName>glaybudclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets</relationshipLabel>
        <relationshipName>glaybudclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets</relationshipLabel>
        <relationshipName>glaybudclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_pddefpct__c</fullName>
        <label>Period Amount Deflation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_pdinfpct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Amount Inflation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_pdpopmethod__c</fullName>
        <label>Period Amount Population Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Set to Zero</fullName>
                    <default>true</default>
                    <label>Set to Zero</label>
                </value>
                <value>
                    <fullName>Set to Actual Current Year Activity</fullName>
                </value>
                <value>
                    <fullName>Set to Actual Prior Year Activity</fullName>
                </value>
                <value>
                    <fullName>Set to Budgeted Prior Year Activity</fullName>
                </value>
                <value>
                    <fullName>Set Proportionally to Source Record and Prior Year Actuals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_revdate__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_revlevel__c</fullName>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_revstatus__c</fullName>
        <label>Revision Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Construction</fullName>
                </value>
                <value>
                    <fullName>Official Base Budget</fullName>
                </value>
                <value>
                    <fullName>Official Revision</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Logically Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_revstatusdate__c</fullName>
        <label>Revision Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_scope__c</fullName>
        <label>Budget Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account &amp; Dimension -Specific Data</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Dim Set-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Account-Wide Data</fullName>
                </value>
                <value>
                    <fullName>Division &amp; Dimension -Specific Data</fullName>
                </value>
                <value>
                    <fullName>Division &amp; Dim Set-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Division-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project &amp; Dimension -Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project &amp; Dim Set-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project-Specific Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_thrudimval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to Through Dimension Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone-to Through Dimension Value)</relationshipLabel>
        <relationshipName>glaybudclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_thruglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to Through GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone-to Through GL Account)</relationshipLabel>
        <relationshipName>glaybudclones02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_thruglproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to Through Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone-to Through Project)</relationshipLabel>
        <relationshipName>glaybudclones02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_todimnum__c</fullName>
        <label>Clone-to Dimension #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_togldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone-to Division)</relationshipLabel>
        <relationshipName>glaybudclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybudclone_toglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone-to Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Clone Financial Budgets (Clone to Fiscal Year)</relationshipLabel>
        <relationshipName>glaybudclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clone Financial Budget</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone Financial Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>